# kube

./: .arcconfig  .clang-format  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .travis.yml  CMakeLists.txt  Messages.sh  README.md  builddocs.sh  kube_version.h.in  mkdocs.yml
accounts/: CMakeLists.txt
accounts/fastmail/: CMakeLists.txt  metadata.json  qmldir
accounts/generic/: CMakeLists.txt  accountplugin.cpp  accountplugin.h  metadata.json  qmldir  settings.cpp  settings.h
accounts/gmail/: CMakeLists.txt  gmailaccountplugin.cpp  gmailaccountplugin.h  gmailsettings.cpp  gmailsettings.h  metadata.json  qmldir
accounts/imap/: CMakeLists.txt  imapaccountplugin.cpp  imapaccountplugin.h  imapsettings.cpp  imapsettings.h  metadata.json  qmldir
accounts/kolabnow/: CMakeLists.txt  kolabnowaccountplugin.cpp  kolabnowaccountplugin.h  kolabnowsettings.cpp  kolabnowsettings.h  metadata.json  qmldir
accounts/maildir/: CMakeLists.txt  maildiraccountplugin.cpp  maildiraccountplugin.h  maildircontroller.cpp  maildircontroller.h  maildirsettings.cpp  maildirsettings.h  metadata.json  qmldir
applications/kmail-quick/: CMakeLists.txt  main.cpp
applications/kube/: CMakeLists.txt  backtrace.cpp  backtrace.h  dbusinterface.cpp  dbusinterface.h  kube.appdata.xml.in  kube.desktop.in  main.cpp  org.kde.kube.appdata.xml  org.kde.kube.desktop
applications/mail/: CMakeLists.txt  main.cpp  org.kde.kube.appdata.xml  org.kde.kube.desktop
components/: CMakeLists.txt  qmldir
components/accounts/: AccountConfiguration.qml.in  AccountWizard.qml  CreateGmail.qml  CreateImap.qml  CreateKolabNow.qml  CreateMaildir.qml  main.qml  metadata.desktop  qmldir
components/kube/: applicationstate.js  main.qml  metadata.desktop  qmldir
components/mail/: metadata.desktop  qmldir
components/mailviewer/: EncryptedPart.qml  MailModel.qml  TextPart.qml  metadata.desktop  qmldir
components/theme/: metadata.desktop  qmldir
extensions/: CMakeLists.txt
extensions/api/: CMakeLists.txt  qmldir
framework/: CMakeLists.txt  frameworkplugin.cpp  frameworkplugin.h  qmldir
framework/accounts/: CMakeLists.txt  accountfactory.cpp  accountfactory.h  accountsmodel.cpp  accountsmodel.h  accountsplugin.cpp  accountsplugin.h  gmailcontroller.cpp  gmailcontroller.h  kolabnowcontroller.cpp  kolabnowcontroller.h  maildircontroller.cpp  maildircontroller.h  qmldir
framework/actions/: CMakeLists.txt  action.cpp  action.h  actionbroker.cpp  actionbroker.h  actionhandler.cpp  actionhandler.h  actionplugin.cpp  actionplugin.h  actionresult.cpp  actionresult.h  context.cpp  context.h  qmldir
framework/domain/: CMakeLists.txt  accountfactory.cpp  accountfactory.h  accountscontroller.cpp  accountscontroller.h  accountsmodel.cpp  accountsmodel.h  attachmentmodel.cpp  completer.cpp  composer.h  composercontroller.cpp  composercontroller.h  contactcontroller.cpp  contactcontroller.h  controller.cpp  controller.h  csshelper.cpp  csshelper.h  foldercontroller.cpp  foldercontroller.h  folderlistcontroller.cpp  folderlistmodel.cpp  folderlistmodel.h  identitiesmodel.cpp  mailcontroller.cpp  mailcontroller.h  maillistmodel.cpp  maillistmodel.h  mailplugin.cpp  mailtemplates.cpp  mailtemplates.h  messageparser.cpp  messageparser.h  messageparser_new.cpp  messageparser_old.cpp  modeltest.cpp  mouseproxy.cpp  mouseproxy.h  objecttreesource.cpp  objecttreesource.h  (+12 more)
framework/extensions/: CMakeLists.txt  qmldir
framework/mail/: CMakeLists.txt  composer.cpp  composer.h  csshelper.cpp  csshelper.h  filehtmlwriter.cpp  filehtmlwriter.h  folderlistcontroller.cpp  folderlistcontroller.h  folderlistmodel.cpp  folderlistmodel.h  maillistcontroller.cpp  maillistcontroller.h  maillistmodel.cpp  maillistmodel.h  mailplugin.cpp  mailplugin.h  mailtemplates.cpp  mailtransport.cpp  mailtransport.h  messageparser.cpp  messageparser.h  objecttreesource.cpp  objecttreesource.h  qmldir  retriever.cpp  retriever.h  singlemailcontroller.cpp  singlemailcontroller.h  stringhtmlwriter.cpp  stringhtmlwriter.h
framework/notifications/: CMakeLists.txt  notificationhandler.cpp  notificationplugin.cpp  notificationplugin.h  qmldir
framework/qml/: AbstractButton.qml  AccountSwitcher.qml  AttachmentDelegate.qml  AutocompleteLineEdit.qml  Avatar.qml  Button.qml  CalendarComboBox.qml  CalendarSelector.qml  CheckBox.qml  Colors.qml  ComboBox.qml  Context.qml  ContextMenuOverlay.qml  ConversationListView.qml  ConversationView.qml  DelegateBackground.qml  EditAccount.qml  EditAccountDialog.qml  EntityComboBox.qml  EntitySelector.qml  ExtensionPoint.qml  FocusComposer.qml  FolderListView.qml  Font.qml  GenericListDelegate.qml  GridView.qml  HeaderField.qml  Heading.qml  HelpPopup.qml  Icon.qml  IconButton.qml  Icons.qml  InlineAccountSwitcher.qml  Label.qml  LeftSidebar.qml  ListDelegate.qml  ListView.qml  LoginAccount.qml  MailListDelegate.qml  MailListView.qml  (+34 more)
framework/settings/: CMakeLists.txt  maildir_resource.cpp  maildir_resource.h  qmldir  resourcelistmodel.cpp  resourcelistmodel.h  resourcescontroller.cpp  settings.cpp  (+4 more)
icons/: .gitignore  CMakeLists.txt  copybreeze.sh
objecttreeparser/: CMakeLists.txt  attachmentstrategy.cpp  attachmentstrategy.h  bodypartformatterfactory.cpp  bodypartformatterfactory.h  bodypartformatterfactory_p.h  converthtmltoplaintext.cpp  converthtmltoplaintext.h  cryptohelper.cpp  cryptohelper.h  csshelper.cpp  csshelper.h  csshelperbase.cpp  csshelperbase.h  htmlquotecolorer.cpp  htmlquotecolorer.h  iconnamecache.cpp  iconnamecache.h  messagepart.cpp  messagepart.h  messageviewer_export.h  messageviewerutil.cpp  messageviewerutil.h  nodehelper.cpp  nodehelper.h  objecttreeemptysource.cpp  objecttreeemptysource.h  objecttreeparser.cpp  objecttreeparser.h  objecttreesourceif.h  objecttreeviewersource.cpp  objecttreeviewersource.h  partmetadata.h  partnodebodypart.cpp  partnodebodypart.h  pluginloader.h  pluginloaderbase.cpp  pluginloaderbase.h
tests/: CMakeLists.txt  kubetestrunner.cpp  qmldir  runinnamespace.sh  testplugin.cpp  teststore.cpp  teststore.h  tst_applicationstart.qml  tst_logview.qml
views/: CMakeLists.txt
(+944 files in other folders)
